# simple_svg_generator

./: LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: build.yaml
src/simple_svg_generator/: __init__.py  svg_element.py
src/simple_svg_generator/elements/: g.py  path.py  svg.py
src/simple_svg_generator/elements/mixins/: set_attribute_protocol.py  stroke_fill.py  transform.py
src/simple_svg_generator/examples/: __init__.py  __main__.py
src/ssg/: __main__.py  svg_element.py  svg_snippet.py  tasks.py
src/ssg/elements/: animate.py  animateTransform.py  circle.py  clipPath.py  g.py  mask.py  path.py  rect.py  svg.py  text.py
src/ssg/elements/mixins/: set_attribute_protocol.py  set_clip_path.py  set_id.py  stroke_fill.py  transform.py
src/ssg/examples/: __init__.py  __main__.py
tests/: test_add.py  test_builder.py  test_subclass_attributes.py  test_svg.py  test_svg_element.py  utils.py
