# Ref: https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "simple_svg_generator"
requires-python = ">= 3.9"
# Ref: https://packaging.python.org/en/latest/guides/single-sourcing-package-version/#single-sourcing-the-version
dynamic = ["version"]
readme = "README.md"
keywords = []
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
]
authors = []

dependencies = []

[project.optional-dependencies]
dev = [
    "black>=24.2.0",
    "coverage>=7.4.1",
    "mypy>=1.8.0",
    "pytest>=8.0.1",
    "ruff>=0.2.2",
]

[project.scripts]

[project.urls]
